added new book notes

--- a/LLMS/Build-An-LLM/Understanding-LLMs.ipynb
+++ b/LLMS/Build-An-LLM/Understanding-LLMs.ipynb
@@ -5,6 +5,14 @@
    "metadata": {},
    "source": [
     "# Understanding large language models\n",
+    "\n",
+    "#### LLMs have remarkable capabilities to understand, generate, and interpret human language. However, it’s important to clarify that when we say language models “understand,” we mean that they can process and generate text in ways that appear coherent and contextually relevant, not that they possess human-like consciousness or comprehension.\n",
+    "\n",
+    "#### An LLM is a neural network designed to understand, generate, and respond to human-like text. These models are deep neural networks trained on massive amounts of text data, sometimes encompassing large portions of the entire publicly available text on the internet.\n",
+    "\n",
+    "#### LLMs utilize an architecture called the transformer, which allows them to pay selective attention to different parts of the input when making predictions, making them especially adept at handling the nuances and complexities of human language.\n",
+    "\n",
+    "#### Research has shown that when it comes to modeling performance, custom-built LLMs—those tailored for specific tasks or domains—can outperform general-purpose LLMs, such as those provided by ChatGPT, which are designed for a wide array of applications. Examples of these include BloombergGPT (specialized for finance) and LLMs tailored for medical question answering (see appendix B for more details).\n",
     "\n"
    ]
   }
