added new book notes

--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -373,6 +373,158 @@
    "source": [
     "#### We can modify the tokenizer to use an <|unk|> token if it encounters a word that is not part of the vocabulary. Furthermore, we add a token between unrelated texts. For example, when training GPT-like LLMs on multiple independent documents or books, it is common to insert a token before each document or book that follows a previous text source, as illustrated in figure 2.10. This helps the LLM understand that although these text sources are concatenated for training, they are, in fact, unrelated."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1132\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_tokens = sorted(list(set(preprocessed)))\n",
+    "all_tokens.extend([\"<|endoftext|>\", \"<|unk|>\"])\n",
+    "vocab = {token:integer for integer,token in enumerate(all_tokens)}\n",
+    "\n",
+    "print(len(vocab.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('younger', 1127)\n",
+      "('your', 1128)\n",
+      "('yourself', 1129)\n",
+      "('<|endoftext|>', 1130)\n",
+      "('<|unk|>', 1131)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, item in enumerate(list(vocab.items())[-5:]):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleTokenizerV2:\n",
+    "    def __init__(self, vocab):\n",
+    "        self.str_to_int = vocab\n",
+    "        self.int_to_str = { i:s for s,i in vocab.items()}\n",
+    "\n",
+    "    def encode(self, text):\n",
+    "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
+    "        preprocessed = [\n",
+    "            item.strip() for item in preprocessed if item.strip()\n",
+    "        ]\n",
+    "        preprocessed = [item if item in self.str_to_int            #1\n",
+    "                        else \"<|unk|>\" for item in preprocessed]\n",
+    "\n",
+    "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+    "        return ids\n",
+    "\n",
+    "    def decode(self, ids):\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+    "\n",
+    "        text = re.sub(r'\\s+([,.:;?!\"()\\'])', r'\\1', text)    #2\n",
+    "        return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, do you like tea? <|endoftext|> In the sunlit terraces of the palace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1 = \"Hello, do you like tea?\"\n",
+    "text2 = \"In the sunlit terraces of the palace.\"\n",
+    "text = \" <|endoftext|> \".join((text1, text2))\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1131, 5, 355, 1126, 628, 975, 10, 1130, 55, 988, 956, 984, 722, 988, 1131, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = SimpleTokenizerV2(vocab)\n",
+    "print(tokenizer.encode(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|unk|>, do you like tea? <|endoftext|> In the sunlit terraces of the <|unk|>.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenizer.decode(tokenizer.encode(text)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [BOS] (beginning of sequence) —This token marks the start of a text. It signifies to the LLM where a piece of content begins.\n",
+    "- [EOS] (end of sequence) —This token is positioned at the end of a text and is especially useful when concatenating multiple unrelated texts, similar to <|endoftext|>. For instance, when combining two different Wikipedia articles or books, the [EOS] token indicates where one ends and the next begins.\n",
+    "- [PAD] (padding) —When training LLMs with batch sizes larger than one, the batch might contain texts of varying lengths. To ensure all texts have the same length, the shorter texts are extended or “padded” using the [PAD] token, up to the length of the longest text in the batch.\n",
+    "\n",
+    "\n",
+    "#### The tokenizer used for GPT models does not need any of these tokens; it only uses an <|endoftext|> token for simplicity. <|endoftext|> is analogous to the [EOS] token. <|endoftext|> is also used for padding. However, as we’ll explore in subsequent chapters, when training on batched inputs, we typically use a mask, meaning we don’t attend to padded tokens. Thus, the specific token chosen for padding becomes inconsequential.\n",
+    "\n",
+    "#### Moreover, the tokenizer used for GPT models also doesn’t use an <|unk|> token for out-of-vocabulary words. Instead, GPT models use a byte pair encoding tokenizer, which breaks words down into subword units, which we will discuss next."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib.metadata import version\n",
+    "import tiktoken\n",
+    "print(\"tiktoken version:\", version(\"tiktoken\"))"
+   ]
   }
  ],
  "metadata": {
