--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -517,14 +517,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tiktoken version: 0.8.0\n"
+     ]
+    }
+   ],
    "source": [
     "from importlib.metadata import version\n",
     "import tiktoken\n",
     "print(\"tiktoken version:\", version(\"tiktoken\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15496, 11, 466, 345, 588, 8887, 30, 220, 50256, 554, 262, 4252, 18250, 8812, 2114, 1659, 617, 34680, 27271, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = (\n",
+    "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
+    "     \"of someunknownPlace.\"\n",
+    ")\n",
+    "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+    "print(integers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, do you like tea? <|endoftext|> In the sunlit terracesof someunknownPlace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "strings = tokenizer.decode(integers)\n",
+    "print(strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
