--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -593,6 +593,159 @@
     "\n",
     "#### The ability to break down unknown words into individual characters ensures that the tokenizer and, consequently, the LLM that is trained with it can process any text, even if it contains words that were not present in its training data."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5145\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "enc_text = tokenizer.encode(raw_text)\n",
+    "print(len(enc_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc_sample = enc_text[50:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [290, 4920, 2241, 287]\n",
+      "y:      [4920, 2241, 287, 257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_size = 4         #1\n",
+    "x = enc_sample[:context_size]\n",
+    "y = enc_sample[1:context_size+1]\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"y:      {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[290] ----> 4920\n",
+      "[290, 4920] ----> 2241\n",
+      "[290, 4920, 2241] ----> 287\n",
+      "[290, 4920, 2241, 287] ----> 257\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(context, \"---->\", desired)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Everything left of the arrow (---->) refers to the input an LLM would receive, and the token ID on the right side of the arrow represents the target token ID that the LLM is supposed to predict. Let’s repeat the previous code but convert the token IDs into text:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " and ---->  established\n",
+      " and established ---->  himself\n",
+      " and established himself ---->  in\n",
+      " and established himself in ---->  a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(tokenizer.decode(context), \"---->\", tokenizer.decode([desired]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We’ve now created the input–target pairs that we can use for LLM training.\n",
+    "\n",
+    "#### There’s only one more task before we can turn the tokens into embeddings: implementing an efficient data loader that iterates over the input dataset and returns the inputs and targets as PyTorch tensors, which can be thought of as multidimensional arrays. In particular, we are interested in returning two tensors: an input tensor containing the text that the LLM sees and a target tensor that includes the targets for the LLM to predict, as depicted in figure 2.13. While the figure shows the tokens in string format for illustration purposes, the code implementation will operate on token IDs directly since the encode method of the BPE tokenizer performs both tokenization and conversion into token IDs as a single step.\n",
+    "\n",
+    "![How the Tokenizer creates inputs and targets](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/tesnor-tokenizer.png)\n",
+    "\n",
+    "#### Figure 2.13 To implement efficient data loaders, we collect the inputs in a tensor, x, where each row represents one input context. A second tensor, y, contains the corresponding prediction targets (next words), which are created by shifting the input by one position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        token_ids = tokenizer.encode(txt)    #1\n",
+    "\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):     #2\n",
+    "            input_chunk = token_ids[i:i + max_length]\n",
+    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.target_ids.append(torch.tensor(target_chunk))\n",
+    "\n",
+    "    def __len__(self):    #3\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):         #4\n",
+    "        return self.input_ids[idx], self.target_ids[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
