--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -742,6 +742,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+    "                         stride=128, shuffle=True, drop_last=True,\n",
+    "                         num_workers=0):\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")                         #1\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)   #2\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=shuffle,\n",
+    "        drop_last=drop_last,     #3\n",
+    "        num_workers=num_workers     #4\n",
+    "    )\n",
+    "\n",
+    "    return dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[  40,  367, 2885, 1464]]), tensor([[ 367, 2885, 1464, 1807]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
+    "data_iter = iter(dataloader)      #1\n",
+    "first_batch = next(data_iter)\n",
+    "print(first_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
