added new book notes

--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -848,11 +848,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Creating token embeddings\n",
+    "\n",
+    "#### The last step in preparing the input text for LLM training is to convert the token IDs into embedding vectors, as shown in figure 2.15. As a preliminary step, we must initialize these embedding weights with random values. This initialization serves as the starting point for the LLM’s learning process. In chapter 5, we will optimize the embedding weights as part of the LLM training."
+   ]
   }
  ],
  "metadata": {
