added new book notes

--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -855,6 +855,92 @@
     "\n",
     "#### The last step in preparing the input text for LLM training is to convert the token IDs into embedding vectors, as shown in figure 2.15. As a preliminary step, we must initialize these embedding weights with random values. This initialization serves as the starting point for the LLM’s learning process. In chapter 5, we will optimize the embedding weights as part of the LLM training."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor([2, 3, 5, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[ 0.3374, -0.1778, -0.1690],\n",
+      "        [ 0.9178,  1.5810,  1.3010],\n",
+      "        [ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-1.1589,  0.3255, -0.6315],\n",
+      "        [-2.8400, -0.7849, -1.4096]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = 6\n",
+    "output_dim = 3\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "print(embedding_layer.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.4015,  0.9666, -1.1481]], grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(embedding_layer(torch.tensor([3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-2.8400, -0.7849, -1.4096],\n",
+      "        [ 0.9178,  1.5810,  1.3010]], grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(embedding_layer(input_ids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding word positions\n",
+    "\n",
+    "#### In principle, token embeddings are a suitable input for an LLM. However, a minor shortcoming of LLMs is that their self-attention mechanism (see chapter 3) doesn’t have a notion of position or order for the tokens within a sequence. The way the previously introduced embedding layer works is that the same token ID always gets mapped to the same vector representation, regardless of where the token ID is positioned in the input sequence, as shown in figure 2.17.\n",
+    "\n",
+    "#### In principle, the deterministic, position-independent embedding of the token ID is good for reproducibility purposes. However, since the self-attention mechanism of LLMs itself is also position-agnostic, it is helpful to inject additional position information into the LLM.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
