--- a/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
+++ b/LLMS/Build-An-LLM/Working-With-Text-Data.ipynb
@@ -961,6 +961,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the previous token_embedding_layer, if we sample data from the data loader, we embed each token in each batch into a 256-dimensional vector. If we have a batch size of 8 with four tokens each, the result will be an 8 × 4 × 256 tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token IDs:\n",
+      " tensor([[   40,   367,  2885,  1464],\n",
+      "        [ 1807,  3619,   402,   271],\n",
+      "        [10899,  2138,   257,  7026],\n",
+      "        [15632,   438,  2016,   257],\n",
+      "        [  922,  5891,  1576,   438],\n",
+      "        [  568,   340,   373,   645],\n",
+      "        [ 1049,  5975,   284,   502],\n",
+      "        [  284,  3285,   326,    11]])\n",
+      "\n",
+      "Inputs shape:\n",
+      " torch.Size([8, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_length = 4\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=8, max_length=max_length,\n",
+    "   stride=max_length, shuffle=False\n",
+    ")\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Token IDs:\\n\", inputs)\n",
+    "print(\"\\nInputs shape:\\n\", inputs.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
